docs(plan): add component naming convention to architecture plan
Adds a new "Phase 0" to the ring architecture optimization plan.
This phase details applying a standardized naming convention (e.g.,
`ring-default:`) to all components to improve organization and
discoverability before the main refactoring work begins.

build(typecheck): add plugin directory to type-checking script

The `plugin/` directory uses its own `tsconfig.json` which was not
being validated by the root-level `typecheck` script. This change
ensures the plugin's code is also type-checked, improving overall
code quality and preventing potential type errors.

fix(security): harden config and ledger loading against invalid input

The configuration loader now ignores files that parse to non-object
values, preventing them from corrupting the final merged config.

Ledger file discovery is made more resilient by iterating through
recent files until a safe one is found. This prevents a single bad
symlink from blocking context injection and hardens the system against
path traversal vulnerabilities.

refactor(hooks): centralize notifications and improve testability

Moves all system notification logic into the dedicated notification
hook, removing it from the main plugin file and lifecycle router for
better separation of concerns.

The hook now accepts an injectable `dispatch` function. This dependency
injection pattern simplifies testing by allowing tests to provide a mock
function instead of relying on actual system calls.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:schema": "bun run script/build-schema.ts",
     "clean": "rm -rf dist",
     "prepublishOnly": "bun run clean && bun run build",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit && tsc -p plugin/tsconfig.json --noEmit",
     "test": "bun test",
     "test:plugin": "bun test plugin/",
     "lint": "biome check .",
